fix z-index for create event

--- a/src/components/BottomButtonGroup/BottomButtonGroup.scss
+++ b/src/components/BottomButtonGroup/BottomButtonGroup.scss
@@ -9,6 +9,7 @@
   color: #40a3cf;
   line-height: 40px;
   text-align: center;
+  z-index: 999;
 }
 .BottomButtonGroup::before{
   position: absolute;
